# gradelib

./: .gitignore  LICENSE.txt  MANIFEST.in  Readme.md  environment.yml  print_version.py  pyproject.toml  requirements.txt  setup.cfg  write_version.py
nbgrader_demo/: Readme.md  classlist.csv
recipe/: meta.yaml
src/gradelib/: __init__.py  build_html.py  build_website.py  convert_submissions.py  copy_files.py  copy_website.py  grade_lib.py  init_canvas_gradebook.py  init_gradebook.py  make_short_ids.py  make_zip.py  move_files.py  rename_files.py  rewrite_zip.py  the_tree.json  utils.py  write_dirtree.py  write_zipfile.py
src/gradelib/src/testlib/: __init__.py  testit.py
the_libs/grade_lib/: MANIFEST.in  print_version.py  pyproject.toml
the_libs/grade_lib/src/gradelib/: gather_files.py  grade_boundaries.py  grade_lib.py  init_gradebook.py  sync_html.py  utils.py
